Reorganized project with frontend and backend folders